network2 extra fixes